force-app/main/default/objects/SRN_Header__c/SRN_Header__c.object-meta.xml
<CustomObject>
    <label>SRN Header</label>
    <nameField>
        <label>SRN Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRN Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>