force-app/main/default/objects/SRN_Header__c/fields/PO_Header__c.field-meta.xml
<CustomField>
    <fullName>PO_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Header</label>
    <referenceTo>PO_Header__c</referenceTo>
    <relationshipLabel>SRN Headers</relationshipLabel>
    <relationshipName>SRN_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>