force-app/main/default/objects/SRN_Header__c/fields/Vendor_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Date__c</fullName>
    <label>Vendor Invoice Date</label>
    <type>Date</type>
</CustomField>