force-app/main/default/objects/SRN_Header__c/fields/Vendor_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_No__c</fullName>
    <label>Vendor Invoice No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>