force-app/main/default/objects/SRN_Header__c/fields/Workflow_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Approval_Status__c</fullName>
    <label>Workflow Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Pending PrePayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>